[package]
name = "socks5"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.32", features = [
  "rt-multi-thread",
  "io-util",
  "macros",
  "net",
] }
futures-util = "0.3"
concat-idents = "1.1"

[dev-dependencies]
