[package]
name = "socks5"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.32", features = [
  "rt-multi-thread",
  "io-util",
  "macros",
  "net",
] }
concat-idents = "1.1"
trust-dns-resolver = "0.23"
lazy_static = "1.4"

[dev-dependencies]

[profile.release]
debug = 0
lto = "fat"
opt-level = "z"
strip = true
